retro68/TODO
In file included from /tmp/wip/retro68/work/Retro68-2019.8.2/PEFTools/../gcc/newlib/libc/include/alloca.h:11,
                 from /tmp/wip/retro68/work/Retro68-2019.8.2/PEFTools/MakePEF.cc:9:
/tmp/wip/retro68/work/Retro68-2019.8.2/PEFTools/../gcc/newlib/libc/include/sys/reent.h:13:10: fatal error: _ansi.h: No such file or directory
   13 | #include <_ansi.h>
      |          ^~~~~~~~~
compilation terminated.
gmake[2]: *** [PEFTools/CMakeFiles/MakePEF.dir/build.make:76: PEFTools/CMakeFiles/MakePEF.dir/MakePEF.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:349: PEFTools/CMakeFiles/MakePEF.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 85%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/LaunchMethod.cc.o
[ 86%] Linking CXX executable TestLaunchAPPLCommon
[ 87%] Building CXX object Elf2Mac/CMakeFiles/Elf2Mac.dir/SegmentMap.cc.o
[ 87%] Built target TestLaunchAPPLCommon
[ 87%] Building CXX object Elf2Mac/CMakeFiles/Elf2Mac.dir/LdScript.cc.o
[ 88%] Building CXX object Elf2Mac/CMakeFiles/Elf2Mac.dir/Reloc.cc.o
[ 89%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/Launcher.cc.o
[ 89%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/Utilities.cc.o
[ 90%] Linking CXX executable ConvertObj
[ 90%] Built target ConvertObj
[ 91%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/Executor.cc.o
[ 91%] Building CXX object Elf2Mac/CMakeFiles/Elf2Mac.dir/Symbol.cc.o
[ 92%] Building CXX object Elf2Mac/CMakeFiles/Elf2Mac.dir/Symtab.cc.o
[ 93%] Linking CXX executable ResInfo
[ 93%] Built target ResInfo
[ 94%] Building CXX object Elf2Mac/CMakeFiles/Elf2Mac.dir/Section.cc.o
[ 94%] Building CXX object Elf2Mac/CMakeFiles/Elf2Mac.dir/Object.cc.o
[ 94%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/MiniVMac.cc.o
[ 94%] Linking CXX executable MakeImport
[ 95%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/SSH.cc.o
[ 95%] Built target MakeImport
[ 96%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/StreamBasedLauncher.cc.o
/tmp/wip/retro68/work/Retro68-2019.8.2/Elf2Mac/Section.cc: In member function 'void Section::FixRelocs(bool)':
/tmp/wip/retro68/work/Retro68-2019.8.2/Elf2Mac/Section.cc:218:24: warning: 'relocBase' may be used uninitialized in this function [-Wmaybe-uninitialized]
  218 |         rela.relocBase = relocBase;
      |         ~~~~~~~~~~~~~~~^~~~~~~~~~~
[ 96%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/Serial.cc.o
[ 97%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/TCP.cc.o
[ 98%] Building CXX object LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/SharedFile.cc.o
[ 99%] Linking CXX executable Elf2Mac
[ 99%] Built target Elf2Mac
/tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc: In member function 'virtual void SharedFileStream::write(const void*, size_t)':
/tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc:51:13: error: 'ofstream' is not a member of 'fs'; did you mean 'std::ofstream'?
   51 |         fs::ofstream out(shared_directory / "in_channel_1", std::ios::binary);
      |             ^~~~~~~~
In file included from /usr/include/g++/bits/localefwd.h:41,
                 from /usr/include/g++/string:43,
                 from /tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/LaunchMethod.h:4,
                 from /tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.h:3,
                 from /tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc:1:
/usr/include/g++/iosfwd:165:34: note: 'std::ofstream' declared here
  165 |   typedef basic_ofstream<char>   ofstream;
      |                                  ^~~~~~~~
/tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc:52:9: error: 'out' was not declared in this scope
   52 |         out.write((const char*)p, n);
      |         ^~~
/tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc: In member function 'virtual void SharedFileStream::wait()':
/tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc:69:17: error: 'ifstream' is not a member of 'fs'; did you mean 'std::ifstream'?
   69 |             fs::ifstream in(shared_directory / "out_channel");
      |                 ^~~~~~~~
In file included from /usr/include/g++/bits/localefwd.h:41,
                 from /usr/include/g++/string:43,
                 from /tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/LaunchMethod.h:4,
                 from /tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.h:3,
                 from /tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc:1:
/usr/include/g++/iosfwd:162:34: note: 'std::ifstream' declared here
  162 |   typedef basic_ifstream<char>   ifstream;
      |                                  ^~~~~~~~
/tmp/wip/retro68/work/Retro68-2019.8.2/LaunchAPPL/Client/SharedFile.cc:71:19: error: 'in' was not declared in this scope; did you mean 'yn'?
   71 |             while(in.read((char*)readBuffer, sizeof(readBuffer)), in.gcount() > 0)
      |                   ^~
      |                   yn
gmake[2]: *** [LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/build.make:230: LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/SharedFile.cc.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:481: LaunchAPPL/Client/CMakeFiles/LaunchAPPL.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
*** Error code 2

Stop.
make[1]: stopped in /export/CHROOT/usr/pkgsrc/wip/retro68
*** Error code 1

Stop.
make: stopped in /export/CHROOT/usr/pkgsrc/wip/retro68
SX2@makoto 07:32:32/240131(..wip/retro68)%
